fix spacing on large screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -594,6 +594,7 @@ br.clear {
 .row {
     margin-top: -50px;
     margin-left: -50px;
+    justify-content: space-around;
 }
 
 .row > * {
